<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cookbook_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/recipe_search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cookbook_search_filter"
        android:icon="@drawable/ic_filter_white"
        android:title="@string/menu_item_recipe_filter_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/cookbook_search_sort"
        android:icon="@drawable/ic_sort_white"
        android:title="@string/menu_item_recipe_sort_title"
        app:showAsAction="always" />

</menu>