<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Subtitle"
            android:text="@string/sort_options_dialog_title"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp" >

            <RadioButton
                android:id="@+id/title_asc"
                android:text="@string/radio_button_title_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                style="@style/Body1"
                android:textColor="@color/textPrimary"/>

            <RadioButton
                android:id="@+id/title_desc"
                android:text="@string/radio_button_title_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                style="@style/Body1"
                android:textColor="@color/textPrimary" />

            <RadioButton
                android:id="@+id/portions_asc"
                android:text="@string/radio_button_portions_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                style="@style/Body1"
                android:textColor="@color/textPrimary" />

            <RadioButton
                android:id="@+id/portions_desc"
                android:text="@string/radio_button_portions_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                style="@style/Body1"
                android:textColor="@color/textPrimary" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_action_dismiss"
                style="@style/TransparentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/dialog_action_dismiss"/>

            <Button
                android:id="@+id/dialog_action_save"
                style="@style/TransparentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/dialog_action_save" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/snippet_loading_view" />

</FrameLayout>