<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/ingredient_amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Body1"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecondary"
            android:hint="@string/_100"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"/>

        <Spinner
            android:id="@+id/spinner_unit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />

        <EditText
            android:id="@+id/ingredient_product_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Body1"
            android:textColorHint="@color/textSecondary"
            android:hint="@string/add_ingredient_product_name"
            android:layout_weight="1"
            android:inputType="text"
            android:imeOptions="actionDone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/dialog_action_dismiss"
            style="@style/TransparentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/dialog_action_dismiss" />

        <Button
            android:id="@+id/dialog_action_add_ingredient"
            style="@style/TransparentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/dialog_action_add" />

    </LinearLayout>

</LinearLayout>