<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/preparation_step_description"
        style="@style/Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/add_preparation_step_description"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_action_dismiss"
            style="@style/TransparentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/dialog_action_dismiss"/>

        <Button
            android:id="@+id/dialog_action_add"
            style="@style/TransparentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/dialog_action_add" />

    </LinearLayout>

</LinearLayout>