<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Subtitle"
            android:visibility="gone" />

        <Button
            android:id="@+id/reset_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TransparentButton"
            android:text="@string/button_reset_checkboxes"
            android:textAlignment="viewEnd"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_action_dismiss"
                style="@style/TransparentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/dialog_action_dismiss" />

            <Button
                android:id="@+id/dialog_action_save"
                style="@style/TransparentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/dialog_action_save" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/snippet_loading_view" />

</FrameLayout>